--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "admin",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://bekjonbegmatov.github.io/Edit-Ai/",
+  "homepage": "https://bekjonbegmatov.github.io/edith-ai",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
